scripts/nohup_run1_FIXED.out

Processing MASTER_FIXED.C...
Info in <TUnixSystem::ACLiC>: creating shared library /data1/avenkate/JpsiLambda_RESTART/scripts/./Trigger_C.so
Info in <TUnixSystem::ACLiC>: creating shared library /data1/avenkate/JpsiLambda_RESTART/scripts/./CollateFiles_C.so
Redirect::open: No such file or directory
WD = /data1/avenkate/JpsiLambda_RESTART/scripts
RedirectOutput::restore: Bad file descriptor
Info in <TUnixSystem::ACLiC>: creating shared library /data1/avenkate/JpsiLambda_RESTART/scripts/./Sanity_C.so
WD = /data1/avenkate/JpsiLambda_RESTART
Info in <TUnixSystem::ACLiC>: creating shared library /data1/avenkate/JpsiLambda_RESTART/scripts/./CutOutKs_C.so
WD = /data1/avenkate/JpsiLambda_RESTART
Info in <TUnixSystem::ACLiC>: creating shared library /data1/avenkate/JpsiLambda_RESTART/scripts/./DosPlot_C.so

[1mRooFit v3.60 -- Developed by Wouter Verkerke and David Kirkby[0m 
                Copyright (C) 2000-2013 NIKHEF, University of California & Stanford University
                All rights reserved, please read http://roofit.sourceforge.net/license.txt

Info in <TCanvas::Print>: pdf file plots/fit_run1LL.pdf has been created
Info in <TCanvas::Print>: pdf file plots/fit_run1LL_sWeights.pdf has been created
Info in <TCanvas::Print>: pdf file plots/fit_run1LL_sWeightsVsMass.pdf has been created
Info in <TCanvas::Print>: pdf file plots/fit_run1LL_sWeightedMass.pdf has been created
Info in <ACLiC>: unmodified script has already been compiled and loaded
Info in <ACLiC>: it will be regenerated and reloaded!
Info in <TUnixSystem::ACLiC>: creating shared library /data1/avenkate/JpsiLambda_RESTART/scripts/./Trigger_C.so
g++: error: /data1/avenkate/JpsiLambda_RESTART/scripts/Trigger_C.so: No such file or directory
Error in <ACLiC>: Compilation failed!
input_line_101:2:3: error: use of undeclared identifier 'Trigger'
 (Trigger(2, 1, 0, 0, 1, 1))
  ^
terminate called after throwing an instance of 'cling::CompilationException'
  what():  Error evaluating expression (Trigger(2, 1, 0, 0, 1, 1))
